--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "gatsby-transformer-remark": "^2.8.28",
     "prettier": "2.0.5"
   },
   "keywords": [
